--- a/sections/Requirements/ProblemDomain.tex
+++ b/sections/Requirements/ProblemDomain.tex
@@ -10,8 +10,8 @@ domain and initial goals for the project.
 Based on the proposed challenge, it is possible to describe an ideal scenario
 of how the turret should operate. We construct an ideal scenario in order to better
 visualize the initial problem and to serve as a basis for specifying the
-requirements. The ideal scenario involves the two actors the ``Turret'' and the
-``Target'', and describes how they should interact with each other.
+requirements. The ideal scenario involves the two actors the \textbf{Turret} and
+the \textbf{Target}, and describes how they should interact with each other.
 
 \begin{center}
 \colorbox{diff}{
@@ -68,8 +68,8 @@ This leads to the following problems:
 \end{itemize}
 
 \subsection{Tracking}
-The ``Tracking'' phase which occurs when a target is found, is used to follow a
-target and gather data about its movements. This information is then used to
+The \textbf{Tracking} phase which occurs when a target is found, is used to
+follow a target and gather data about its movements. This information is then used to
 predict where the target will be at any given time as well as to calculate a
 shooting position.\nl
 
@@ -100,9 +100,9 @@ design problems must be overcome. We already determined the following as hard
 requirements based on the semester topic:
 
 \begin{enumerate}
-	\item The developed system must be classifiable as an embedded system
+	\item The developed system must be classifiable as an embedded system.
 	\item The developed system must use techniques and models taught in either the
-	machine intelligence or real-time systems courses
+	machine intelligence or real-time systems courses.
 \end{enumerate}
 
 During the analysis, three distinct phases were identified, \textbf{Scanning},
