--- a/sections/titlepages.tex
+++ b/sections/titlepages.tex
@@ -3,7 +3,7 @@
   \englishprojectinfo{
     Turret Systems 101 %title
   }{%
-    Embeded Systems
+    Embedded Systems
 	%theme
   }{%
     Fall 2016 %project period
@@ -30,7 +30,7 @@
 }{% the abstract
 During the semester introduction, the semester coordinator proposed a challenge
 which consisted of developing an autonomous turret, which is capable of hitting
-a moving target. In addition, the project participants partake in an
+a moving target. In addition, the project group participated in an
 introductory course in machine intelligence. Therefore this project focuses on
 the design and development of an autonomous turret, and the implementation of a
 machine intelligence model. This is all done in relation to the semester theme,
