--- a/sections/Analyse/SystemDescription/Conclusion.tex
+++ b/sections/Analyse/SystemDescription/Conclusion.tex
@@ -21,7 +21,9 @@ different aspects can be used in relation to the \name system.
 \end{itemize}  
 
 With the system analysed, it is now possible to determine how we ensure that
-the turret will actually hit the target.
+the turret will actually hit the target. An important part of this consists of
+being able to accurately calculate the projectiles trajectory, which will be
+addressed in the following chapter.
 
 
 % \subsubsection{Machine Intelligence}
