--- a/sections/PhysTheory/ProjectilePhysics.tex
+++ b/sections/PhysTheory/ProjectilePhysics.tex
@@ -1,8 +1,9 @@
 \chapter{Projectile Physics}\label{ProjPhys}
-In order to accurately fire a projectile, we are going to need knowledge about
-the theory of projectile motion. This knowledge comes in the form of theorems
+As the turret shuld be able to accurately hit a target location, we will need to
+determine what mathematical and physical models are necessary to implement in
+order to accomplish this task. This knowledge comes in the form of theorems
 relating to the trajectory of projectiles under the influence of earths
-gravity.
+gravity, namely the theory of projectile motion.
 
 % In order to accurately fire a projectile, there is a number of information which
 % will be required. This information mainly consists of theorems relating to
@@ -10,8 +11,8 @@ gravity.
 % earths gravity.\nl
 
 Due to the importance that these physical phenomena have in relation the the
-project, this chapter will be used to present, explain and discuss all relevant
-theory.
+project, this chapter will be used to present, explain and discuss the relevant
+mathematical and physical models.
 
 % This chapter will be used to present, explain and discuss the physical phenomena
 % which are relevant to the motion of the cannons projectile.
