--- a/sections/PhysTheory/ProjectileMotion.tex
+++ b/sections/PhysTheory/ProjectileMotion.tex
@@ -26,8 +26,8 @@ The formulas use the following variables:
 In addition, the following variables are used in the following sections:
 % tried to make it more thorough and added x_0
 \begin{itemize}
-  \item $y_0\ (m)$ - Height at firing
-  \item $x_0\ (m)$ - Distance at firing
+  \item $y_0\ (m)$ - Height offset of the turrets muzzle
+  \item $x_0\ (m)$ - Distance offset of the turrets muzzle
 \end{itemize}
 
 By using this theorem, we can use the projectiles initial velocity, combined
