--- a/sections/PhysTheory/CalculatingOffset.tex
+++ b/sections/PhysTheory/CalculatingOffset.tex
@@ -13,4 +13,11 @@ velocity of the target. With this information it is then possible to use
 pythagoras theorem to calculate the length from the turret to the current
 position of the target. All of this can be used together with the cosine
 relation to calculate how much the turret should turn to be able to hit the
-target.
+target. This topic is further explained during the implementation in
+\autoref{ImplLabel}.
+
+\section{Conclusion}
+Based on the mathematical and physical models explained in this chapter, it
+should be possible to predict the trajectory of the projectile when fired from
+the turret. With this in mind, the following chapters will be used to present
+and discuss hardware choices and turret designs.
