--- a/sections/Sensors/Sensors.tex
+++ b/sections/Sensors/Sensors.tex
@@ -7,9 +7,9 @@ sensors, this chapter will be used to explain, analyze and test the different
 sensors which will be used throughout this project.
 
 \section{Sensor Choices}\label{SensorChoice}
-Based on the turret's ideal scenario, \autoref{ProblemDomain}, it was
-determined that the turrets routine should consist of three main phases:
-scanning, tracking and shooting. These phases questions how the
+Based on the turret's ideal scenario presented in \autoref{ProblemDomain}, it
+was determined that the turrets routine should consist of three main phases:
+scanning, tracking and shooting. These phases posed the questions of how the
 turret should identity a target, measure the distance to the target and then shoot the
 target. For the purpose of this project, these questions will be solved using
 two main sensors: a camera and a distance sensor. The camera will be able to
@@ -27,7 +27,7 @@ powerful, but it is easily integrateable with the LEGO NXT platform and it can
 be placed on the turret itself. In the end, we chose to use the NXTCam, as one
 of the semesters goals is to teach us about designing around the limitations of
 embedded systems. By using a Kinect with an attatched PC, this entire problem is
-nullified, which would go againt the idea of imposed limitations.
+nullified, which would counteract the idea of hardware-imposed limitations.
 
 % For the purpose of sensing its environment, the turret will need two key
 % features: the ability to identify a target, and the ability to measure the
