--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -1,11 +1,11 @@
 \chapter{Platform Choice}\label{PlatformC}
-The purpose of this chapter will be to analyse the different hardware platforms available
-and ultimately select one for the project. The platforms to be examined are LEGO
+The purpose of this chapter will be to analyse the different hardware platforms
+available, and ultimately select one for the project. The platforms to be examined are LEGO
 NXT Mindstorms and Arduino. These are chosen due to the fact that these
-platforms are offered by the university and that they are suited for an embedded system.
-First the platforms will be described briefly, then they will be
-compared based on a set of criteria. In conclusion a platform for the project
-will be chosen.
+platforms are offered by the university and that they are suited for
+implementing an embedded system. First the platforms will be described briefly,
+then they will be compared based on a set of criteria. In conclusion a platform
+for the project will be chosen.
 
 \section{Evaluation Criteria}\label{EvalCrit}
 In order to compare the two platforms we have to establish a set of criteria
