--- a/sections/Design/BNDesig/DesignBN.tex
+++ b/sections/Design/BNDesig/DesignBN.tex
@@ -1,5 +1,14 @@
 \chapter{Model Design}
 
+The purpose of the belief network is to predict the directional vector of the
+target. This allows us to make a general prediction of the direction and speed
+the target is travelling at. This can then be used to hit the target at a
+specified point in time. This chapter will be used to describe the network and
+explain the variables and their domain.
+
 \section{Network Structure}
 
 The network is designed
+
+
+\figx{SimplifiedBN}{The model for the belief network}
