--- a/sections/frontpage.tex
+++ b/sections/frontpage.tex
@@ -24,7 +24,7 @@
     \vspace{0.2cm}
     \begin{center}
     \Huge{\textbf{
-	Turret Systems 101
+	- ARES -\\ Autonomous Reconnaissance and Extermination System
     }}
     \end{center}
     \begin{center}
@@ -36,7 +36,7 @@
     \midrule
     \toprule[2pt]
   \end{tabular}
-  \vspace{4 cm}
+  \vspace{1.5 cm}
   \begin{center}
     {\large
       Project Report%Insert document type (e.g., Project Report)
@@ -46,7 +46,12 @@
 		SW507E16
     }
   \end{center}
-  \vfill
+  \begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.08]{figures/Turret2.jpg}
+  \end{figure}
+  
+%\vfill
   \begin{center}
   Aalborg Universitet\\
   Institut for Datalogi
