--- a/sections/titlepages.tex
+++ b/sections/titlepages.tex
@@ -1,7 +1,7 @@
 {\selectlanguage{english} \pdfbookmark[0]{Title page}{label:titlepage_en}
 \aautitlepage{%
   \englishprojectinfo{
-    Turret Systems 101 %title
+    ARES - Autonomous Reconnaissance and Extermination System%title
   }{%
     Embedded Systems
 	%theme
