--- a/sections/appAname.tex
+++ b/sections/appAname.tex
@@ -1,3 +1,4 @@
 \input{sections/Appendix/Physics/DistanceTest} 
 \input{sections/Appendix/Physics/DistanceData}
+\input{sections/Appendix/Physics/FlourTestJones}
 \input{sections/Testing/Testing.tex}
