--- a/sections/Implementation/MIImplementation/ImplBN.tex
+++ b/sections/Implementation/MIImplementation/ImplBN.tex
@@ -9,11 +9,11 @@ written in C\# which takes an input from the NXT, this input would be gotten
 via serial communication. This communication should also be used for
 communicating the results from the belief network. In the suggested
 implementation Hugin API will be doing the calculations and the program will act
-as an interface between theese calculations and the NXT. \nl
+as an interface between the calculations made by Hugin and the NXT. \nl
 
 Another way of potentially implementing the network, would be to implement it
 directly on the NXT. This however presents a new set of issues, the first
-problem being getting the results fast enough. The second issue is how much RAM
-and flash memory the NXT has. Because of these issues we chose to implement the
-network on a computer and then using serial communication between the computer
-and the NXT.
+issue being the runtime of the calculations. This is an issue since the NXT is
+not a very powerfull platform and doing complex calculations might take a long
+time. The second issue is how much RAM and flash memory the NXT has. Because of these
+issues the network would have to be very simplified and thus not as effective 
